Map not showing fixed
I just changed some Z-index error and changed the layout of map to be more appropriate for its now current use

--- a/src/components/Map/Map/Map.css
+++ b/src/components/Map/Map/Map.css
@@ -1,18 +1,9 @@
 .component_map-map{
 
-    position: absolute;
-
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-
     height: 100%;
     width: 100%;
 
-    /*opacity: 0.5;*/
-
-    z-index: -5;
-
+    z-index: 3;
+    
     overflow-x: hidden;
 }
